--- a/http/vulnerabilities/other/gz-forum-script-xss.yaml
+++ b/http/vulnerabilities/other/gz-forum-script-xss.yaml
@@ -17,7 +17,7 @@ info:
 http:
   - method: GET
     path:
-      - "{{BaseURL}}preview.php?controller=Load&action=index&catid=moztj%22%3E%3Cscript%3Ealert(document.domain)%3C%2fscript%3Ems3ea&down_up=a"
+      - "{{BaseURL}}/preview.php?controller=Load&action=index&catid=moztj%22%3E%3Cscript%3Ealert(document.domain)%3C%2fscript%3Ems3ea&down_up=a"
 
     matchers:
       - type: dsl
